<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<scm>
		<developerConnection>scm:git:ssh://git.herb.herbmarshall.com/repository/util/PomParent</developerConnection>
		<tag>PomParent-1.9</tag>
	</scm>

	<groupId>com.herbmarshall</groupId>
	<artifactId>PomParent</artifactId>
	<version>1.9</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>                         17   </java.version>

		<maven-compiler-plugin.verion>      3.8.1   </maven-compiler-plugin.verion>
		<maven-surefire-plugin.version>  3.0.0-M8   </maven-surefire-plugin.version>
		<checkstyle-plugin.version>         3.1.2   </checkstyle-plugin.version>
		<checkstyle.version>               10.6.0   </checkstyle.version>
		<junit.version>                     5.8.2   </junit.version>
		<jacoco.version>                    0.8.8   </jacoco.version>
		<maven-release-plugin.version>   3.0.0-M7   </maven-release-plugin.version>

		<coverage-level>                     1.00   </coverage-level>
		<project.build.sourceEncoding>      UTF-8   </project.build.sourceEncoding>
	</properties>

	<modules>
		<module>libraryParent</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.verion}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle-plugin.version}</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>
						<!-- Hopefully this can be removed in future surefire versions -->
						--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
						--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>CLASS</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage-level}</minimum>
										</limit>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>${coverage-level}</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<scmCommentPrefix>[Release] </scmCommentPrefix>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${checkstyle-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>${checkstyle.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>nexus</id>
			<name>Nexus Releases</name>
			<url>https://nexus.herb.herbmarshall.com/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus</id>
			<name>Nexus Snapshots</name>
			<url>https://nexus.herb.herbmarshall.com/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle-plugin.version}</version>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
				</configuration>
			</plugin>
		</plugins>
	</reporting>


</project>
